--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -60,3 +60,17 @@
 .product-card button:hover {
   background-color: #f5f5f5;
 }
+
+.site-footer {
+  background-color: #b30000;
+  color: white;
+  padding: 20px;
+  margin-top: 40px;
+  text-align: center;
+}
+
+.site-footer p {
+  margin: 5px 0;
+  font-size: 14px;
+}
+
